refactor: return accepted on new movie creation
