# docs/swagger.yaml
@@ -39,8 +39,8 @@ paths:
       produces:
       - application/json
       responses:
-        "200":
-          description: OK
+        "201":
+          description: Created
           schema:
             $ref: '#/definitions/main.Movie'
       summary: Create a new movie
@@ -108,6 +108,8 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/main.Movie'
+        "404":
+          description: Not Found
       summary: Update existant movie
   /movies:
     get:
